[gd_scene load_steps=16 format=2]

[ext_resource path="res://res/ying/ying.png" type="Texture" id=1]
[ext_resource path="res://res/Gui/UiElements/Options_pin.png" type="Texture" id=2]
[ext_resource path="res://tscn/map/faciV.gd" type="Script" id=3]
[ext_resource path="res://res/Gui/UiElements/Tiny_roundFrame.png" type="Texture" id=4]
[ext_resource path="res://res/Gui/MiniUiIcons/Icon_back.png" type="Texture" id=5]
[ext_resource path="res://res/Gui/MiniUiIcons/Icon_X.png" type="Texture" id=6]
[ext_resource path="res://res/font/SourceHanSansCN-Black.otf" type="DynamicFontData" id=7]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="DynamicFont" id=8]
outline_size = 2
outline_color = Color( 0, 0, 0, 0.741176 )
font_data = ExtResource( 7 )

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("cs:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "g"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("cs:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.25098, 0.25098, 0.25098, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("img/img/glow:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("img:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("img:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "glow"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("img/img/glow:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.34902 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("img:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "trig"
tracks/0/type = "value"
tracks/0/path = NodePath("img/img/glow:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.34902 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("img:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("img:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "trig"
} ]
}

[node name="faciV" type="VisibilityNotifier2D"]
self_modulate = Color( 0.776471, 0.776471, 0.776471, 1 )
light_mask = 2
script = ExtResource( 3 )

[node name="TextureRect" type="Sprite" parent="."]
unique_name_in_owner = true
self_modulate = Color( 0.745098, 0.745098, 0.745098, 1 )
light_mask = 2
position = Vector2( 2.47956e-06, -7.525 )
scale = Vector2( 0.325, 0.325 )
texture = ExtResource( 2 )

[node name="Ying" type="Sprite" parent="."]
unique_name_in_owner = true
self_modulate = Color( 0, 0, 0, 0.564706 )
show_behind_parent = true
light_mask = 2
position = Vector2( 0, 16 )
scale = Vector2( 0.509375, 0.258593 )
texture = ExtResource( 1 )

[node name="img" type="Node2D" parent="."]
light_mask = 2
position = Vector2( 0, -7.525 )
scale = Vector2( 1.2, 1.2 )

[node name="img" type="TextureButton" parent="img"]
unique_name_in_owner = true
light_mask = 2
margin_left = -16.0
margin_top = -15.0
margin_right = 16.0
margin_bottom = 17.0
rect_min_size = Vector2( 32, 32 )
rect_pivot_offset = Vector2( 16, 16 )
mouse_filter = 1
expand = true

[node name="glow" type="TextureRect" parent="img/img"]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0 )
light_mask = 2
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="lvLab" type="Label" parent="."]
unique_name_in_owner = true
light_mask = 2
margin_left = -14.8334
margin_top = -0.333347
margin_right = 15.1666
margin_bottom = 21.6667
text = "1"
align = 1

[node name="TinyRoundFrame" type="Sprite" parent="lvLab"]
show_behind_parent = true
light_mask = 0
position = Vector2( 14.75, 11.2884 )
scale = Vector2( 0.224159, 0.215144 )
texture = ExtResource( 4 )

[node name="name" type="Label" parent="."]
unique_name_in_owner = true
light_mask = 2
margin_left = -25.5
margin_top = -20.0
margin_right = 25.5
margin_bottom = 1.99998
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_fonts/font = SubResource( 8 )
text = "城镇"
align = 1

[node name="cs" type="TextureRect" parent="."]
unique_name_in_owner = true
light_mask = 2
margin_left = -8.83334
margin_top = -41.9334
margin_right = 11.1667
margin_bottom = -23.9334
texture = ExtResource( 5 )
expand = true

[node name="cs" type="TextureRect" parent="cs"]
light_mask = 2
material = SubResource( 5 )
margin_right = 20.0
margin_bottom = 18.0
texture = ExtResource( 5 )
expand = true

[node name="cs2" type="TextureRect" parent="cs"]
show_behind_parent = true
light_mask = 2
margin_left = 1.0
margin_top = 0.769228
margin_right = 19.0
margin_bottom = 17.7692
texture = ExtResource( 4 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="cs"]
anims/RESET = SubResource( 6 )
anims/g = SubResource( 7 )

[node name="x" type="Sprite" parent="."]
unique_name_in_owner = true
visible = false
light_mask = 2
position = Vector2( 0, -6.00001 )
scale = Vector2( 0.328906, 0.297656 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/RESET = SubResource( 3 )
anims/glow = SubResource( 1 )
anims/trig = SubResource( 4 )

[connection signal="screen_entered" from="." to="." method="_on_faciV_screen_entered"]
[connection signal="screen_exited" from="." to="." method="_on_faciV_screen_exited"]
[connection signal="visibility_changed" from="." to="." method="_on_faciV_visibility_changed"]
[connection signal="pressed" from="img/img" to="." method="_on_img_pressed"]
